WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107211
Do not track user interaction for plugins that are not snapshotted
https://bugs.webkit.org/show_bug.cgi?id=107211
Summary
Do not track user interaction for plugins that are not snapshotted
Jon Lee
Reported
2013-01-17 17:57:52 PST
Interaction with a plugin that has not been snapshotted causes an assertion in WebProcess::plugInDidReceiveUserInteraction since the plugin origin might not be in the cached table. <
rdar://problem/12967277
>
Attachments
Patch
(1.90 KB, patch)
2013-01-17 18:06 PST
,
Jon Lee
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2013-01-17 18:06:40 PST
Created
attachment 183337
[details]
Patch
Jon Lee
Comment 2
2013-01-17 18:10:47 PST
Committed
r140081
: <
http://trac.webkit.org/changeset/140081
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug