third_party/WebKit/Source/WebKit2/WebProcess/WebProcess.cpp
@@ -817,7 +817,8 @@ void WebProcess::plugInDidReceiveUserInteraction(unsigned plugInOriginHash)
         return;
 
     HashMap<unsigned, double>::iterator it = m_plugInAutoStartOrigins.find(plugInOriginHash);
-    ASSERT(it != m_plugInAutoStartOrigins.end());
+    if (it == m_plugInAutoStartOrigins.end())
+        return;
     if (it->value - currentTime() > plugInAutoStartExpirationTimeUpdateThreshold)
         return;
 
